# HUST_SignalandSystemBigHomework

./: .gitignore  EngineeringDesignAssignmentReport.aux  EngineeringDesignAssignmentReport.fdb_latexmk  EngineeringDesignAssignmentReport.fls  EngineeringDesignAssignmentReport.out  EngineeringDesignAssignmentReport.tex  EngineeringDesignAssignmentReport.toc  EngineeringDesignAssignmentReport.xdv  README.md  requirement.md  template.tex  工程设计作业报告-参考模板.docx
codes/Q1/: Cargo.toml  README.md  main.rs
codes/Q1/output/: Q1_results.txt
codes/Q2/: Cargo.toml  README.md  butterworth_filter.rs
codes/Q2/output/: Q2_filter_coefficients.txt  Q2_frequency_response.txt
codes/Q3/: Cargo.toml  PROJECT_STATUS.md  README.md
codes/Q3/output/: Q3_results.txt  Q3_summary.txt
codes/Q3/src/: audio_reader.rs  audio_writer.rs  demodulator.rs  error_main.rs  iir_filter.rs  main.rs  spectrum_analyzer.rs
codes/Q4/: Cargo.toml  PROJECT_STATUS.md  README.md
codes/Q4/output/: Q4_comparison.txt  Q4_results.txt
codes/Q4/src/: comparator.rs  frequency_shifter.rs  ideal_filter.rs  main.rs  spectrum_analyzer.rs
工程设计问题-2022/工程设计题1. 爱因斯坦一秒变梦露之谜/: 1. 爱因斯坦一秒变梦露之谜.docx
工程设计问题-2022/工程设计题16.光学频率梳产生/: 工程设计题16.doc
工程设计问题-2022/工程设计题17.有限冲激响应滤波器应用/: 工程设计题17.doc
工程设计问题-2022/工程设计题18.数据平滑处理/: 工程设计题18.doc
工程设计问题-2022/工程设计题18.数据平滑处理/待处理的数据文件/: beforesmfpulse.txt  rect1600ghz1kmout.txt  saw800ghz2kmout.txt  triang1600ghz2kmout.txt  trt2km.txt
工程设计问题-2022/工程设计题2. 语音伪装器设计/: 2. 语音伪装器设计.docx
工程设计问题-2022/工程设计题9. 数字图像重建/: bluredImg.mat  bluredSampleImg.mat  orgSampleImg.mat
